# twitch_jam

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: docs.yaml  docs.yml
bevy_twitch_minimap/: Cargo.toml  bacon.toml  justfile  rustfmt.toml
bevy_twitch_minimap/bevy_twitch_minimap/: Cargo.toml
bevy_twitch_minimap/bevy_twitch_minimap/src/: lib.rs
bevy_twitch_minimap/demo/: Cargo.toml
bevy_twitch_minimap/demo/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  api.md  api_extension.md  api_game.md  intro.md  minimap.md  minimap_api.md  minimap_bevy.md
extension/: index.html
game/TwitchRealms/Assets/FBX/: arch.fbx  arch_fill.fbx  penguin.fbx  suzanne.fbx
game/TwitchRealms/Assets/Materials/: BubbleMaterial.mat  PortalMaterial.mat  PortalShader.shadergraph
game/TwitchRealms/Assets/Plugins/: TwitchSDK.cs  TwitchSDK.xml  TwitchSDKSettings.cs  TwitchSDKSettingsEditor.cs
game/TwitchRealms/Assets/Prefab/: Bozz.prefab  Bubble.prefab  Cube.prefab  Player_Mesh.prefab  Sphere.prefab  suzanne.prefab
game/TwitchRealms/Assets/Scenes/: Arena.unity  Main.unity  MainScene.unity  Main_jov.unity  Menu.unity  MenuScene.unity  SampleScene.unity
game/TwitchRealms/Assets/Scripts/: BossSpawner.cs  Bubble.cs  BubbleData.cs  BubbleGenerator.cs  CameraFollowPlayer.cs  ChannelPointListener.cs  CharacterBuilder.cs  CheerManager.cs  Combinable.cs  Controllable.cs  (+13 more)
game/TwitchRealms/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
server/: .copier-answers.yml  Cargo.toml  README.md  compose.yaml  dockerfile
server/src/: main.rs
(+10 files in other folders)
