[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5", features=["json"]}
serde = {version = "1.0", features=["derive", "rc"]}
rocket_okapi = {version="0.8", features=["swagger"]} 
ws = { package = "rocket_ws", version = "0.1" }
log = "0.4"

[dependencies.uuid]
version = "1.10"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
