[package]
name = "bevy_twitch_minimap"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.14", default-features=false, features=["bevy_color"]}
serde = "1.0"
serde_json = "1.0"
websocket = {version = "0.27", default-features=false, features=["sync", "sync-ssl"]}
reqwest = {version = "0.12", features=["blocking"]}
